[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://timer_score.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/scroll.png" type="Texture" id=5]
[ext_resource path="res://assets/right_click.png" type="Texture" id=6]
[ext_resource path="res://assets/left_click.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 200
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 542.043, 459.446 )

[node name="Timer" type="Timer" parent="."]

[node name="timer_score" parent="." instance=ExtResource( 3 )]
position = Vector2( -27.1311, 0 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 512, 512 )
z_index = 1
texture = ExtResource( 4 )

[node name="color_border" type="Node2D" parent="Sprite"]
editor/display_folded = true
position = Vector2( -512, -512 )

[node name="ColorRect2" type="ColorRect" parent="Sprite/color_border"]
margin_left = -2245.27
margin_top = -1724.0
margin_right = -2185.27
margin_bottom = -1559.0
rect_scale = Vector2( 37.6829, 25.9247 )
color = Color( 0, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="Sprite/color_border"]
margin_left = 999.0
margin_top = -180.0
margin_right = 1065.0
margin_bottom = -83.0
rect_scale = Vector2( 37.6829, 25.9247 )
color = Color( 0, 0, 0, 1 )

[node name="ColorRect5" type="ColorRect" parent="Sprite/color_border"]
margin_left = 3493.0
margin_top = 1004.0
margin_right = 3534.0
margin_bottom = 1161.0
rect_rotation = 89.9999
rect_scale = Vector2( 37.6829, 25.9247 )
color = Color( 0, 0, 0, 1 )

[node name="ColorRect4" type="ColorRect" parent="Sprite/color_border"]
margin_left = 3471.59
margin_top = -1748.0
margin_right = 3518.59
margin_bottom = -1557.0
rect_rotation = 89.9999
rect_scale = Vector2( 37.6829, 25.9247 )
color = Color( 0, 0, 0, 1 )

[node name="start_txt" type="Node2D" parent="."]
editor/display_folded = true
z_index = 3

[node name="wave_selected_text" type="Label" parent="start_txt"]
modulate = Color( 1, 1, 1, 0.333333 )
margin_left = -146.474
margin_top = 378.822
margin_right = 2853.53
margin_bottom = 587.822
rect_scale = Vector2( 0.433619, 0.433619 )
custom_fonts/font = SubResource( 2 )
text = "VAGUE : 1"
align = 1

[node name="scroll" type="Node2D" parent="start_txt"]

[node name="scroll" type="Label" parent="start_txt/scroll"]
modulate = Color( 1, 1, 1, 0.333333 )
margin_left = 314.247
margin_top = 630.058
margin_right = 1823.25
margin_bottom = 1033.06
rect_scale = Vector2( 0.269011, 0.269011 )
custom_fonts/font = SubResource( 2 )
text = "changer  de niveau"
align = 1
autowrap = true

[node name="scroll2" type="Sprite" parent="start_txt/scroll"]
modulate = Color( 1, 1, 1, 0.584314 )
position = Vector2( 510.989, 853.939 )
scale = Vector2( 0.266989, 0.266989 )
texture = ExtResource( 5 )

[node name="right" type="Node2D" parent="start_txt"]
visible = false

[node name="right_click" type="Label" parent="start_txt/right"]
modulate = Color( 1, 1, 1, 0.333333 )
margin_left = 613.529
margin_top = 275.0
margin_right = 2122.53
margin_bottom = 484.0
rect_scale = Vector2( 0.269011, 0.269011 )
custom_fonts/font = SubResource( 2 )
text = "Tutoriel"
align = 1
autowrap = true

[node name="right" type="Sprite" parent="start_txt/right"]
modulate = Color( 1, 1, 1, 0.584314 )
position = Vector2( 811.469, 153.764 )
scale = Vector2( 0.266989, 0.266989 )
texture = ExtResource( 6 )

[node name="left" type="Node2D" parent="start_txt"]

[node name="left_click" type="Label" parent="start_txt/left"]
modulate = Color( 1, 1, 1, 0.333333 )
margin_left = -9.53674e-007
margin_top = 275.0
margin_right = 1509.0
margin_bottom = 484.0
rect_scale = Vector2( 0.269011, 0.269011 )
custom_fonts/font = SubResource( 2 )
text = "Jouer"
align = 1
autowrap = true

[node name="left" type="Sprite" parent="start_txt/left"]
modulate = Color( 1, 1, 1, 0.584314 )
position = Vector2( 195.22, 153.764 )
scale = Vector2( 0.266989, 0.266989 )
texture = ExtResource( 7 )

[node name="color" type="Node2D" parent="."]
editor/display_folded = true
z_index = -3

[node name="ColorRect" type="ColorRect" parent="color"]
margin_right = 28.0
margin_bottom = 40.0
rect_scale = Vector2( 37.6829, 25.9247 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 512 )
current = true

[node name="sounds" type="Node2D" parent="."]

[node name="player_death" type="AudioStreamPlayer" parent="sounds"]
volume_db = -30.0

[node name="player_win_level" type="AudioStreamPlayer" parent="sounds"]
volume_db = -30.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
